--- a/About.html
+++ b/About.html
@@ -47,7 +47,7 @@
   <div class="hero">
     <div class="container">
       <h1 class="logo">
-        <a href="Homepage.html"><img src="../img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
+        <a href="index.html"><img src="../img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
       </h1>
     </div> <!-- closes .container -->
   </div> <!-- end .hero -->
