--- a/Sources.html
+++ b/Sources.html
@@ -44,13 +44,13 @@
     <![endif]-->
     <!-- Add your site or application content here -->
 
-    <div class="hero">
-      <div class="container">
-        <h1 class="logo">
-          <a href="Homepage.html"><img src="../img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
-        </h1>
-      </div> <!-- closes .container -->
-    </div> <!-- end .hero -->
+  <div class="hero">
+    <div class="container">
+      <h1 class="logo">
+        <a href="index.html"><img src="../img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
+      </h1>
+    </div> <!-- closes .container -->
+  </div> <!-- end .hero -->
 
     <div class="masthead">
       <div class="container">
