--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     Normalize
     Eric Meyer's Reset
     -->
-    <link href="../css/vendor/sanitize.css" rel="stylesheet">
+    <link href="css/vendor/sanitize.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/vendor/normalize.css"> -->
     <!-- <link rel="stylesheet" href="css/vendor/reset.css"> -->
     <!--
