--- a/Sources.html
+++ b/Sources.html
@@ -22,19 +22,19 @@
     <!--
     @NOTE Enable Skeleton's Grid
     -->
-    <link href="../css/vendor/skeleton.css" rel="stylesheet"><!--
+    <link href="css/vendor/skeleton.css" rel="stylesheet"><!--
     @NOTE Enable Boilerplate's helpers
     This include some simple utility classes
     -->
-    <link href="../css/vendor/boilerplate.css" rel="stylesheet"><!--
+    <link href="css/vendor/boilerplate.css" rel="stylesheet"><!--
     @NOTE Enable Skeleton's basic styling
     This styles things like buttons and tables.
     -->
     <!-- <link rel="stylesheet" href="css/vendor/skeleton-styles.css"> -->
-    <link href="../css/main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <!-- Modernizr detects a browsers different capabilities -->
 
-    <script src="../js/vendor/modernizr-2.8.3.min.js">
+    <script src="js/vendor/modernizr-2.8.3.min.js">
     </script>
 </head>
 
@@ -47,7 +47,7 @@
   <div class="hero">
     <div class="container">
       <h1 class="logo">
-        <a href="index.html"><img src="../img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
+        <a href="index.html"><img src="img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
       </h1>
     </div> <!-- closes .container -->
   </div> <!-- end .hero -->
@@ -75,7 +75,7 @@
     <div class="menu-kitchen">
       <div class="container">
         <div class="gallery row">
-          <img src="../img/084.jpg" alt="Crops">
+          <img src="img/084.jpg" alt="Crops">
         </div>  <!-- closes .gallery row -->
         <div class="columns twelve centered">
           <p class="source-items">
@@ -93,7 +93,7 @@
     <div class="container">
       <div class="section">
         <div class="icon">
-          <img src="../img/logoiconv2.png" alt="Cunningham's Iconic U">
+          <img src="img/logoiconv2.png" alt="Cunningham's Iconic U">
         </div> <!-- closes .icon -->
       </div> <!-- closes .section -->
 
@@ -106,10 +106,10 @@
         <div class="aside">
           <ul class="media_buttons">
             <li>
-              <a href="https://www.facebook.com/cunninghamsMD/"><img src="../img/myfacebookcirclev1.png" alt="facebook"></a>
+              <a href="https://www.facebook.com/cunninghamsMD/"><img src="img/myfacebookcirclev1.png" alt="facebook"></a>
             </li>
             <li>
-              <a href="https://twitter.com/cunninghamsmd"><img src="../img/mytwittercirclev3.png" alt="twitter"> </a>
+              <a href="https://twitter.com/cunninghamsmd"><img src="img/mytwittercirclev3.png" alt="twitter"> </a>
             </li>
           </ul>
         </div> <!-- closes .aside -->
@@ -123,9 +123,9 @@
     <script>
     window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="../js/plugins.js">
+    <script src="js/plugins.js">
     </script>
-    <script src="../js/main.js">
+    <script src="js/main.js">
     </script> <!--
     @NOTE Google Analytics:
     change UA-XXXXX-X to be your site's ID.
