making it one page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="hero">
     <div class="container">
       <h1 class="logo">
-        <a href="index.html"><img src="img/white-logo-w-blue.png" alt="Cunningham's Logo"></a>
+        <img src="img/white-logo-w-blue.png" alt="Cunningham's Logo">
       </h1>
     </div> <!-- closes .container -->
   </div> <!-- end .hero -->
@@ -58,22 +58,22 @@
 	<div class="masthead">
 		<ul class="nav bar fit" id="#primary-nav">
 			<li>
-				<a href="About.html">About</a>
+				<a href="#about">About</a>
 			</li>
 			<li>
-				<a href="Team.html">Team</a>
+				<a href="#team">Team</a>
 			</li>
 			<li>
-				<a href="Menus.html">Menus</a>
+				<a href="#menus">Menus</a>
 			</li>
 			<li>
-				<a href="Sources.html">Sources</a>
+				<a href="#sources">Sources</a>
 			</li>
 		</ul>
 	</div> <!-- closes .container -->
 </div> <!-- closes .masthead -->
 
-<div class="menu">
+<div class="menu" id="home">
 	<div class="menu-kitchen">
 		<div class="container">
 			<div class="gallery row">
@@ -90,13 +90,354 @@
 					WINE PAIRING | $19/PP <br>
 				</p>
 
-				<a href="Menus.html"><h6>View The Menu</h6></a>
+				<a href="#menus"><h6>View The Menu</h6></a>
 			</div> <!-- closes .about-gallery -->
     </div> <!-- closes .gallery row -->
 		</div> <!-- closes .container -->
   </div> <!-- closes .menu-kitchen -->
 
+</div> <!-- end .menu and home -->
+
+<div id="about" class="page-section">
+    <div class="menu">
+      <div class="menu-kitchen">
+        <div class="container">
+          <div class="gallery row">
+    				<img src="img/190.jpg" alt="Kitchen">
+        </div> <!-- closes .gallery row -->
+          <div class="gallery columns twelve centered">
+              <div class="about-items">
+            Cunningham’s is a seasonal American grille that blends the
+            modern atmosphere of city dining with the rustic, smoky
+            flavors of the countryside. Using a wood-fired grill and
+            oven, we provide guests with dishes created from the
+            freshest seasonal and local ingredients possible. We
+            believe that an excellent dining experience is built on
+            thoughtful, attentive service and sourcing products that
+            are grown and crafted responsibly. Each of these aspects
+            contributes to our mission of providing our guests with an
+            unmatched dining experience. We hope that you will visit
+            us soon!
+          </div> <!-- closes .about-items -->
+    </div> <!-- closes .gallery columns twelve centered -->
+  </div> <!-- closes .container -->
+</div> <!-- cloese .menu-kitchen -->
+    </div> <!-- end .menu -->
+</div> <!-- end about -->
+
+<div id="team" class="page-section">
+<div class="menu">
+<div class="menu-kitchen">
+  <div class="container">
+    <div class="row">
+      <div class="columns four">
+        <img src="img/chris-becker.jpg" alt="Chris Becker">
+      </div> <!-- end of .colums four -->
+    <div class="columns eight">
+      <h5 class="chef-item-name">
+        Chris Becker
+      </h5>
+      <p class="chef-item-title">
+        Chief Executive Officer & Corporate Executive Chef
+      </p>
+        <br>
+      <p class="chef-item-desc">
+        A Baltimore native and veteran of several of the city’s most highly-regarded restaurants, Chef Becker oversees daily operations for all of the Bagby Restaurant Group restaurants including Bagby Pizza Company, Ten Ten American Bistro, Fleet Street Kitchen, Cunningham’s and Cunningham’s Café & Bakery.
+      </p>
+    </div> <!-- end of .colums eight-->
+    </div> <!-- end of .row -->
+<br>
+
+    <div class="row">
+      <div class="columns four">
+        <img src="img/jason-lear.jpg" alt="Jason Lear">
+      </div><!-- end of .colums four -->
+    <div class="columns eight">
+      <h5 class="chef-item-name">
+        Jason Lear
+      </h5>
+      <p class="chef-item-title">
+        Executive Chef
+      </p>
+      <br>
+      <p class="chef-item-desc">
+        Another Baltimore native, Jason has spent time in kitchens all over Maryland. After graduating from the Culinary Institute of America in Hyde Park, New York, Jason began his career on the Eastern Shore at the Tilghman Island Inn. After a stint in Plainfield, New Hampshire at the Home Hill Inn – a Relais & Chateaux property – he returned to Baltimore plying his trade at several notable restaurants including Peerce’s Plantation, Bistro RX and The Wine Market.
+      </p>
+    </div> <!-- end of .colums eight-->
+    </div> <!-- end of .row -->
+<br>
+
+    <div class="row">
+      <div class="columns four">
+        <img src="img/angie-lee.jpg" alt="Angie Law">
+      </div><!-- end of .colums four -->
+    <div class="columns eight">
+      <h5 class="chef-item-name">
+        Angie Law
+      </h5>
+      <p class="chef-item-title">
+        Executive Pastry Chef
+      </p>
+      <br>
+      <p class="chef-item-desc">
+        Chef Angie Law’s passion for food began in the kitchen of her mother’s small family-run restaurant, where she would help whenever she could after school. Following her love of cooking, she decided to attend Penn State, where she graduated with a degree in food science, and then went on to perfect her culinary skills at L’Academie de Cuisine in Gaithersburg, MD.
+      </p>
+    </div> <!-- end of .colums eight-->
+    </div> <!-- end of .row -->
+
+<br>
+<ul class="chef-items">
+
+  <li class="chef-item">
+    <h5 class="chef-item-name">
+      John Aversa
+    </h5>
+    <p class="chef-item-title">
+      Head Baker
+    </p>
+  <br>
+    <p class="chef-item-desc">
+      A native of Columbia, Maryland, John has been baking bread since his childhood. Growing up with a father who was an avid baker, he became accustomed to baking each and every weekend, drawn to the rigor and precision of the process. Thus, when he decided to attend Baltimore International College, it was only natural that he he gravitated toward their baking program, where he excelled, graduating in 2000.
+    </p>
+  </li>
+
+  <li class="chef-item">
+    <h5 class="chef-item-name">
+      Tim Riley
+    </h5>
+    <p class="chef-item-title">
+      Beverage Director
+    </p>
+<br>
+    <p class="chef-item-desc">
+      A Baltimore native, Tim brings an intense passion for beverage service and an extensive knowledge of wine, beer, spirits and coffee to his position at Cunningham’s. An honors graduate of the Culinary Institute of America, Tim has worked all over the East Coast. His experience includes stints with Chef Cindy Wolf at both Charleston and Petit Louis in Baltimore; at the Statler Hotel in Ithaca, New York; at the Renaissance Waterfront Hotel in Boston, and at Beacon Grille in Woburn, Massachusetts.
+    </p>
+  </li>
+
+  <li class="chef-item">
+    <h5 class="chef-item-name">
+      Ryan Shacochis
+    </h5>
+    <p class="chef-item-title">
+      Director of Restaurant Operations
+    </p>
+    <br>
+    <p class="chef-item-desc">
+      A devoted hospitality professional, Ryan began his education in service and hospitality in Cape Cod, Massachusetts while working at restaurants such as Ciro & Sal’s, The Governor Bradford, and The Mews. He further refined his approach to service at two well-known Baltimore restaurants: Vespa in Federal Hill, and The Wine Market in Locust Point. During his years at The Wine Market, Ryan rose from his position as Assistant General Manager to General Manager. There, he oversaw the operation of both the restaurant and wine shop, and worked closely with both Chef Chris Becker and Chef Jason Lear to develop seasonal and local menus. During that time, his culinary insights and dining advice were featured in both Baltimore Style and Baltimore Magazine.
+    </p>
+  </li>
+<br>
+</ul>
+
+</div> <!-- closes .container -->
+</div> <!-- closes .menu-kitchen -->
 </div> <!-- end .menu -->
+</div> <!-- end team -->
+
+<div id="menus" class="page-section">
+    <div class="menu">
+      <div class="menu-kitchen">
+        <div class="container">
+          <div class="columns twelve">
+            <div class="menu-section">
+              <h4 class="menu-section-menu">Appetizers</h4>
+                <ul class="menu-items">
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Maryland Crab Soup
+                    </h5>
+                      <p class="menu-item-desc">
+                        summer vegetable, tomato, lump crab
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Rosé</span>,
+                        château des deux rocs, languedoc, france 2013
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Spring Greens Salad
+                    </h5>
+                      <p class="menu-item-desc">
+                        spring greens, strawberry, candied walnut, english peas, poppy seed vinaigrette
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Sauvignon Blanc</span>
+                        neil ellis, sincerely, western cape, south africa 2014
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Cornmeal Fried Oysters
+                    </h5>
+                      <p class="menu-item-desc">
+                        housemade bacon, arugula, garlic-dijon cream
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Albariño</span>
+                        deusa nai, rías baixas, spain 2012
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Roasted Beet Salad
+                    </h5>
+                      <p class="menu-item-desc">
+                        pickled beets, pine nut butter, greens, pine nuts
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Rosé</span>,
+                        château des deux rocs, languedoc, france 2013
+                      </p>
+                  			 <br>
+                  </li>
+                </ul>
+            </div> <!-- end .menu-section -->
+
+            <div class="menu-section">
+              <h4 class="menu-section-menu">Entrées</h4>
+                <ul class="menu-items">
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Roasted Chicken Breast
+                    </h5>
+                      <p class="menu-item-desc">
+                        carrot purée, brown butter cabbage, bacon & mushroom jus
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Chianti Style Blend</span>,
+                        bibbiano, di fattoria, tuscany, italy 2010
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Grilled Salmon Summer Salad
+                    </h5>
+                      <p class="menu-item-desc">
+                        brown sugar glazed salmon, roasted corn, edamame, heirloom tomato, crumbled goat cheese, champagne vinaigrette
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Pinot Noir</span>,
+                        anglewood, neuquen, patagonia, argentina 2012
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      70Z Flat Iron Steak
+                    </h5>
+                      <p class="menu-item-desc">
+                        duck fat fried smashed potatoes, pickled onion, micro greens
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Grenache Blend</span>
+                        bois de saint jean, cunningham’s cuvée, côtes du rhône, france 2012
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Carne Supremo Flatbread
+                    </h5>
+                      <p class="menu-item-desc">
+                        tomato sauce, mozzarella,asiago, caramelized onion, sopressata, fennel sausage, pepperoni
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Syrah Blend</span>,
+                        sentinelle de massiac, minervois, languedoc, france 2014
+                      </p>
+                    <br>
+                  </li>
+                </ul>
+              </div> <!-- end .menu-section -->
+
+              <div class="menu-section">
+                <h4 class="menu-section-menu">Dessert</h4>
+                <ul class="menu-items">
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Vanilla Créme Brûlée
+                    </h5>
+                      <p class="menu-item-desc">
+                        vanilla custard, crispy tuile,berries,coconutsugar
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Madeira</span>,
+                        broadbent, five year reserve, malmsey, portugal
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Peachy Summer Crisp
+                    </h5>
+                      <p class="menu-item-desc">
+                        local blueberries, peaches, vanilla ice cream
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Sauternes-Style Blend</span>
+                        château la rame, saint-croix-du-mont, bordeaux, france 2010
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Chocolate Bar
+                    </h5>
+                      <p class="menu-item-desc">
+                        tcho milk chocolate mousse, ceremony coffee ice cream, raspberry tuile
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Port</span>,
+                        churchill’s, late bottle vintage, douro, portugal 2005
+                      </p>
+                  </li>
+
+                  <li class="menu-item">
+                    <h5 class="menu-item-title">
+                      Trio Of Ice Cream or Sorbet
+                    </h5>
+                      <p class="menu-item-desc">
+                        served with housemade cookies
+                      </p>
+                      <p class="menu-item-pairing">
+                        <span class="pairing-type">Sherry</span>
+                        lustau, east india solera, jerez, spain
+                      </p>
+                    <br>
+                  </li>
+                </ul>
+              </div> <!-- end .menu-section -->
+            </div> <!-- end .columns twelve -->
+          </div> <!-- end .container -->
+        </div> <!-- end .menu-kitchen -->
+      </div> <!-- end .menu -->
+</div> <!-- end menus -->
+
+<div id="sources" class="page-section">
+  <div class="menu">
+    <div class="menu-kitchen">
+      <div class="container">
+        <div class="gallery row">
+          <img src="img/084.jpg" alt="Crops">
+        </div>  <!-- closes .gallery row -->
+        <div class="columns twelve centered">
+          <p class="source-items">
+            Located among the hills and plains of Cockeysville and My Lady’s Manor in Monkton, Cunningham Farms is the primary source for much of Cunningham’s produce, eggs, and meats. Our farmer, Chris Gavin, manages many acres filled with planted fields with over fifteen varieties of tomatoes, dozens of greens, herbs, and vegetables. All produce is grown from seeds and tended by hand using traditional and sustainable methods. Synthetic fertilizers, chemical pesticides and genetically modified produce are avoided. Our chickens are fed organic feed and raised in a free-range pasture, allowing them to produce healthy, flavorful eggs. We are beginning to see the first arrivals of heritage breed pigs as well as Kathadin sheep which provide us with some of the very best pork and lamb we have ever tasted.
+            <br>
+            At Cunningham’s Chefs Jason Lear and Michael Correll embraces the relationship with the farm as it allows him to provide our guests with items picked at the peak of flavor, freshness and nutritional content. It also allows the restaurant to lessen its ecological and carbon footprint by sourcing its products from a location only minutes away from the restaurant.
+             </p>
+           </div> <!-- closes .columns twelve centered -->
+          </div> <!-- closes .container -->
+			</div> <!-- closes .menu-kitchen -->
+	</div> <!-- end .menu -->
+
+</div> <!-- end sources -->
 
 <div class="footer">
   <div class="container">
