--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <div id="about" class="page-section">
     <div class="menu">
       <div class="menu-kitchen">
-        <div class="container">
+        <div class="container bg-404040">
           <div class="gallery row">
     				<img src="img/190.jpg" alt="Kitchen">
         </div> <!-- closes .gallery row -->
@@ -128,13 +128,14 @@
 <div id="team" class="page-section">
 <div class="menu">
 <div class="menu-kitchen">
-  <div class="container">
+  <div class="container bg-404040">
     <div class="row">
       <div class="columns four">
         <img src="img/chris-becker.jpg" alt="Chris Becker">
       </div> <!-- end of .colums four -->
     <div class="columns eight">
       <h5 class="chef-item-name">
+        <br>
         Chris Becker
       </h5>
       <p class="chef-item-title">
@@ -237,7 +238,7 @@
 <div id="menus" class="page-section">
     <div class="menu">
       <div class="menu-kitchen">
-        <div class="container">
+        <div class="container bg-404040">
           <div class="columns twelve">
             <div class="menu-section">
               <h4 class="menu-section-menu">Appetizers</h4>
@@ -422,7 +423,7 @@
 <div id="sources" class="page-section">
   <div class="menu">
     <div class="menu-kitchen">
-      <div class="container">
+      <div class="container bg-404040">
         <div class="gallery row">
           <img src="img/084.jpg" alt="Crops">
         </div>  <!-- closes .gallery row -->
